--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ disqus_shortname: ibarrond-github-io # replace with your disqus username
 
 # Permalinks
 permalink: /:title
-permalink: /author/:author
+# permalink: /author/:author
 # permalink: /tag/:tag
 
 # Authors' info in `_data/authors.yml`
