--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,31 @@
-/_site
+# OS X
+.DS_Store
+
+# Jekyll build
+/_site/
+.jekyll-metadata
+#Gemfile.lock
+
+# webstorm
+.idea/
+
+# others
+*.swp
+
+# site build
 *.gem
-.sass-cache
+*.rbc
+.bundle
+.config
+coverage
+InstalledFiles
+lib/bundler/man
+pkg
+rdoc
+spec/reports
+test/tmp
+test/version_tmp
+tmp
+vendor
 Gemfile.lock
+node_modules
