--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     ],
     "repository": {
         "type": "git",
-        "url": "https://github.com/ibarrond/BeAVoice.git"
+        "url": "https://github.com/ibarrond/ibarrond.github.io.git"
     },
     "bugs": "https://github.com/TryGhost/Casper/issues",
     "contributors": "https://github.com/TryGhost/Casper/graphs/contributors",
@@ -49,6 +49,6 @@
         "postcss-easy-import": "1.0.1"
     },
     "config": {
-        "posts_per_page": 10
+        "posts_per_page": 15
     }
 }
