Solving URL issues

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "author": {
         "name": "ibarrond",
         "email": "ibarrond@eurecom.fr",
-        "url": "https://ibarrond.github.io"
+        "url": "https://ibarrond.github.io/"
     },
     "gpm": {
         "type": "theme",
