--- a/_config.yml
+++ b/_config.yml
@@ -72,10 +72,8 @@ lsi: False
 username: ibarrond
 repo: ibarrond.github.io
 branch: master
-relative_source: ../
+relative_source: ..//
 destination: ../ibarrond-pages/
-production_url:  https://ibarrond.github.io/
-source_url:  https://github.com/ibarrond/ibarrond.github.io/
 
 exclude:
   - assets/css
