Solving URL issues

--- a/_config.yml
+++ b/_config.yml
@@ -72,7 +72,7 @@ lsi: False
 username: ibarrond
 repo: ibarrond.github.io
 branch: gh-pages
-relative_source: ..//
+relative_source: ../
 destination: ../ibarrond-pages/
 
 exclude:
