--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ cover: assets/images/blog-cover.jpg
 logo: assets/images/blog-title.png
 logo_dark: assets/images/favicon.png
 favicon: assets/images/favicon.png
-production_url:  https://ibarrond.github.io/
+production_url:  https://ibarrond.github.io
 source_url:  https://github.com/ibarrond/ibarrond.github.io/
 CNAME: #add cname for website to be created
 
