--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ disqus_shortname: ibarrond-github-io # replace with your disqus username
 # Permalinks
 permalink: /:title
 # permalink: /author/:author
-permalink: /tag/:tag
+# permalink: /tag/:tag
 
 # Authors' info in `_data/authors.yml`
 # Tags' info in `_data/tags_info.yml`
