--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ words_per_minute: 200
 
 # edit baseurl to simply '/' if using as your personal page (instead of a project page)
 baseurl: '/'
-url:  https://ibarrond.github.io/
+
 
 # Website info
 title: "Be A Voice, not an Echo"
@@ -16,8 +16,6 @@ cover: assets/images/blog-cover.jpg
 logo: assets/images/blog-title-transparent.png
 logo_dark: assets/images/favicon.png
 favicon: assets/images/favicon.png
-production_url:  https://ibarrond.github.io/
-source_url:  https://github.com/ibarrond/ibarrond.github.io/
 CNAME: #add cname for website to be created
 
 # Social info
@@ -73,8 +71,11 @@ lsi: False
 username: ibarrond
 repo: ibarrond.github.io
 branch: gh-pages
-relative_source: ../ibarrond.github.ia/
-destination: ../ibarrond-pages/
+relative_source: ../blog/
+destination: ../blog-pages/
+url:  https://ibarrond.github.io
+production_url:  https://ibarrond.github.io
+source_url:  https://github.com/ibarrond/ibarrond.github.io/
 
 exclude:
   - assets/css
