One post per tag, author ibarrond modified

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -15,9 +15,9 @@ ibarrond:
   location: Sophia Antipolis, FR
   url_full: https://ibarrond.github.io/
   url: ibarrond.github.io
-  bio: Researcher on deep learning & secure computing
-  picture: assets/images/avatar.png
+  bio: PhD fellow, Researcher on deep learning & secure computing @ IDEMIA & EURECOM
+  picture: assets/images/favicon.png
   linkedin: albertoibarrondo
   facebook: False
   twitter: ibarrond_
-  cover: assets/images/telecom-antenna.jpg
+  cover: assets/images/cover_alberto.jpg
