--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -15,8 +15,8 @@ ibarrond:
   location: Sophia Antipolis, FR
   url_full: https://ibarrond.github.io/
   url: ibarrond.github.io
-  bio: PhD fellow, Researcher on deep learning & secure computing @ IDEMIA & EURECOM
-  picture: assets/images/favicon.png
+  bio: PhD fellow, Researcher on deep learning & secure computing at IDEMIA & EURECOM.
+  picture: assets/images/al_logo-white-bg.png
   linkedin: albertoibarrondo
   facebook: False
   twitter: ibarrond_
