--- a/package.json
+++ b/package.json
@@ -1,11 +1,8 @@
 {
-    "name": "casper",
-    "description": "The default personal blogging theme for Ghost. Beautiful, minimal and responsive.",
-    "demo": "https://demo.ghost.io",
-    "version": "2.1.9",
-    "engines": {
-        "ghost": ">=1.2.0"
-    },
+    "name": "beavoice",
+    "description": "A Professional blog to share engineering knowhow",
+    "demo": "https://ibarrond.github.io",
+    "version": "1.0.0",
     "license": "MIT",
     "screenshots": {
         "desktop": "assets/screenshot-desktop.jpg",
@@ -31,14 +28,14 @@
         "type": "git",
         "url": "https://github.com/ibarrond/ibarrond.github.io.git"
     },
-    "bugs": "https://github.com/TryGhost/Casper/issues",
-    "contributors": "https://github.com/TryGhost/Casper/graphs/contributors",
+    "bugs": "https://github.com/ibarrond/ibarrond.github.io/issues",
+    "contributors": "https://github.com/ibarrond/ibarrond.github.io/graphs/contributors",
     "devDependencies": {
         "autoprefixer": "6.3.6",
         "cssnano": "3.7.1",
         "gulp": "3.9.1",
         "gulp-livereload": "3.8.1",
-        "gulp-nodemon": "2.1.0",
+        "gulp-nodemon": "^2.4.2",
         "gulp-postcss": "6.1.1",
         "gulp-sourcemaps": "1.6.0",
         "gulp-util": "3.0.7",
