--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,9 @@ install:
   # Install Jekyll and dependencies
   - bundle install
 
-script: bundle exec rake site:deploy --trace  #--quiet
+script:
+  - bundle exec rake site:deploy --trace  #--quiet
+  - bundle exec jekyll algolia
 
 # Generate your secure token with the travis gem:
 # get Github token from your Travis CI profile page
