IMPORTANT! Fixing Infinity error in paginate

--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@
 markdown: kramdown
 highlighter: rouge
 paginate: 15 # it will paginate after this number
+per_page: 15 # Repeated to fix an 'Infinity' error 
 language: 'en-uk'
 words_per_minute: 200
 
