Fixing some issues with Algolia Viz

--- a/_config.yml
+++ b/_config.yml
@@ -43,6 +43,15 @@ algolia:
   application_id: URIHIBX1QW
   index_name:     ibarrond.github.io
   search_only_api_key: 97513f1d98c0d721051de13d1e45ba00
+  files_to_exclude: [
+    index.html,
+    about/index.md
+    topics/index.md
+  ]
+  settings:
+    attributesToSnippet: ['*:33']
+    highlightPreTag: '<em class="ais-match-highlight">'
+    highlightPostTag: '</em>'
 
 # Authors' info in `_data/authors.yml`
 # Tags' info in `_data/tags_info.yml`
