Tweaking algolia search + footbar icons

--- a/_config.yml
+++ b/_config.yml
@@ -43,6 +43,9 @@ algolia:
   application_id: URIHIBX1QW
   index_name:     ibarrond.github.io
   search_only_api_key: 97513f1d98c0d721051de13d1e45ba00
+  extensions_to_index:
+    - html
+    - md
   files_to_exclude: 
     - index.html
     - tag/**
