--- a/_config.yml
+++ b/_config.yml
@@ -49,6 +49,10 @@ algolia:
   files_to_exclude: 
     - index.html
     - tag/**
+    - _data/**
+    - _includes/**
+    - _layouts/**
+    - _plugins/**
     - about/**
     - author/**
     - assets/**
@@ -93,7 +97,7 @@ username: ibarrond
 repo: ibarrond.github.io
 branch: master
 relative_source: ../ibarrond.github.io/
-destination: ../_site/
+destination: ./_built_site/
 url:  https://ibarrond.github.io/
 production_url:  https://ibarrond.github.io/
 source_url:  https://github.com/ibarrond/ibarrond.github.io/
