--- a/assets/files/requirements.txt
+++ b/assets/files/requirements.txt
@@ -22,6 +22,7 @@ datashader # Render huge datasets
 matplotlib_venn # Plotting Venn diagrams
 seaborn    # Improving Matplotlib
 bokeh      # Interactive data visualization
+plotly     # Interactive data visualization
 
 # Web App and REST
 requests   # Basic - interact with any REST API
@@ -32,6 +33,9 @@ tensorflow           # Basic - Deep Learning from google
 tensorflow_hub       # Collection of tf models
 tensorflow_datasets  # Collection of tf datasets
 scikit-learn         # Basic - Machine Learning
+Keras		     # Deep Learning from FB
+torch		     # Deep Learning from FB
+fastai		     # Deep Learning from the very best
 
 # Time Series (Only in Linux)
 #   -> Requires a C++ compiler: sudo apt-get install build-essential
@@ -46,3 +50,6 @@ sphinx			# Standard documentation generator, reads docstrings!
 sphinx-gallery		# Gallery of examples
 memory-profiler		# Memory usage when running examples
 sphinxcontrib-fulltoc	# Full TOC in sidebar
+
+# personal packages
+Pyfhel
